Changed launch script to include a background start and env file